[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Generally, once we progress beyond initial planning, we ought to pin our dependencies using the = operator instead of the tilde ~.

bracket-lib = "~0.8.1"
legion = "=0.3.1"
